--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,9 @@ h1 {
   border-radius: 15px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 canvas, video {
@@ -43,4 +46,17 @@ canvas, video {
   font-weight: bold;
   font-size: 20px;
   z-index: 10;
+}
+
+#finalScore {
+  color: #222;
+  background-color: #eee;
+  padding: 10px;
+  border-radius: 5px;
+  width: 640px;
+  text-align: center;
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 24px;
+  user-select: none;
 }
